<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_MBusStatus" Id="{25b89785-f89b-4617-b75e-fd9019febabd}">
    <Declaration><![CDATA[TYPE ST_MBusStatus :
STRUCT
	bStatusOk	: BOOL;
    bBusy		: BOOL;
    bError		: BOOL;
    nErrId		: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>